Refactor deadlock detection and enhance notification handling.
Introduced detailed deadlock detection with task-specific data and updated system notifications to include associated task references. Added support for fetching notifications by type and read status, and refined broadcast parameters in notification handling.